More code tidying.